# critino

./: .gitignore  LICENSE  README.md  compose.yaml  dev.sh  shell.nix
services/api/: nixpacks.toml  pyproject.toml  railway.json
services/api/src/: __init__.py
services/api/src/interfaces/: db.py
services/api/src/lib/: auth.py  fewShot.py  few_shot.py  keys.py  url_utils.py  validators.py  vectorstores.py  xml_utils.py
services/api/src/routers/: auth.py  critiques.py  environments.py  index.py
web/: -  database.types.ts  envsource.sh  eslint.config.js  nixpacks.toml  package.json  pnpm-lock.yaml  prettier.config.js  railway.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vercel.json
web/src/: app.d.ts  app.html  app.pcss  hooks.server.ts
web/src/lib/: context.ts  schema.ts  utils.ts  xml.ts
web/src/lib/api/: index.ts  v0.d.ts
web/src/lib/components/ui/: nav.svelte
web/src/lib/components/ui/breadcrumb/: breadcrumb.svelte  index.ts
web/src/lib/components/ui/button/: index.ts
web/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
web/src/lib/components/ui/entity-control-grid/: entity-control-grid.svelte  index.ts
web/src/lib/components/ui/input/: input.svelte
web/src/lib/components/ui/mode-switcher/: index.ts
web/src/lib/components/ui/select/: select-trigger.svelte
web/src/lib/components/ui/tabs/: tabs-list.svelte
web/src/lib/components/ui/tiptap/: index.ts  tiptap.svelte
web/src/lib/components/ui/typography/: example.svelte  index.ts  typography.svelte
web/src/lib/icons/: critino.svelte  icon.svelte  index.ts  startino.svelte
web/src/lib/supabase/: database.types.ts  index.ts
web/src/lib/theme/: index.ts  md3.ts  schemes.ts  theme.ts
web/src/lib/types/: routes.ts
web/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +layout.ts  +page.server.ts  +page.svelte  breadcrumb.svelte  nav.svelte  routes.ts  sidepanel.svelte  team-switcher.svelte  teams.ts  theme-switcher.svelte
web/src/routes/(web)/: +layout.svelte  theme-switcher.svelte
web/src/routes/(web)/[team]/: +layout.server.ts  +layout.svelte  +page.server.ts  sidepanel.svelte  team-switcher.svelte
web/src/routes/(web)/[team]/projects/: +page.server.ts  +page.svelte
web/src/routes/[team]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  routes.ts  schema.ts  sidepanel.svelte
web/src/routes/[team]/(envs)/[...env]/: +layout.server.ts  +layout.svelte  +page.svelte  routes.ts
web/src/routes/[team]/(team)/: +layout.server.ts  +layout.svelte  +page.svelte
web/src/routes/[team]/(team)/settings/: +page.svelte
web/src/routes/[team]/[...env]/: +layout.svelte  +page.server.ts  +page.svelte  routes.ts
web/src/routes/[team]/[...env]/workflows/: +layout.server.ts  +page.svelte
web/src/routes/[team]/environments/: +page.server.ts  +page.svelte
web/src/routes/[team]/environments/[...env]/: +layout.server.ts  +layout.svelte  +page.svelte  routes.ts
web/src/routes/[team]/projects/: +page.server.ts  +page.svelte
web/src/routes/[team]/projects/[project]/: +page.server.ts
web/src/routes/[team]/settings/: +page.svelte
web/src/routes/api/: +server.ts
web/src/routes/projects/: +page.server.ts  +page.svelte
web/src/routes/projects/[project]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  routes.ts
web/src/routes/projects/[project]/agents/: +page.svelte
web/supabase/: config.toml
web/theme/: color.ts  colors.ts  md3.json  md3.ts  md3_pcss_generator.py  typography.ts
(+62 files in other folders)
