[tool.poetry]
name = "src"
version = "0.0.1"
description = "descritpion"
authors = [
    "Jonas Lindberg <jonas.lindberg@futi.no>",
    "Jorge Lewis <jorge.lewis@futi.no>",
]
readme = "./README.md"
homepage = "https://starti.no"
repository = "https://github.com/startino"
documentation = "https://starti.no/docs"
license = "BSL-1.1 (https://github.com/startino/relevantino/blob/alpha/LICENSE)"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = { extras = ["standard"], version = "*" }
tenacity = "*"
supabase = "*"
aiohttp = "*"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
praw = "*"
markdown = "*"
gptrim = "*"
pandas = "*"
reddit-chatbot-python = "*"
selenium = "*"
mail = "*"
python-dotenv = "*"
diskcache = "*"
pydantic = "*"
python-upwork-oauth2 = "*"
sse-starlette = "*"

[tool.poetry.group.dev.dependencies]
mypy = "*"
black = "*"
isort = "*"
autoflake = "*"
flake8 = "*"
pytest = "*"
pytest-cov = "*"
pyright = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
